Completes Lab 6
